Fix click tricks (set full animation shorthand), fix text selection on Safari

--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-*, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; }
+*, *::before, *::after { box-sizing: border-box; margin: 0; padding: 0; user-select: none; -webkit-user-select: none; }
 
 html, body {
   width: 100%; height: 100%;
